--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ title: "Evidence For Masks"
 description: "This is a short site that lists the evidence for masks/face coverings and tries to show the scientific consensus exists. It is here for your referance or for you to send to people who are in denial."
 baseurl: / # the subpath of your site, e.g. "/blog"
 url: evidenceformasks.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-logo: /images/logo.png # path of site logo, e.g. "/images/logo.png"
+logo: assets/images/logo.png # path of site logo, e.g. "/images/logo.png"
 date_format: "%Y-%m-%d"
 read_time: false # reading time estimates, e.g. true
 words_per_minute: # 200
