--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@
 skin: "/assets/css/skins/dark.css"
 locale: en-UK
 title: "Evidence For Masks"
-description: "This is a short site that lists the evidence for masks/face coverings and tries to show the scientific consensus exists. It is here for your referance or for you to send to people who are in denial."
+description: "This is a short site that lists the evidence for masks/face coverings and tries to show the scientific consensus exists. It is here for your referance or for you to send to people who are in denial. Each posts title is a link to the evidnece with a few quotes or summaries of its key points below."
 baseurl: / # the subpath of your site, e.g. "/blog"
 url: evidenceformasks.com # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 logo: assets/images/logo.png # path of site logo, e.g. "/images/logo.png"
 date_format: "%Y-%m-%d"
-read_time: false # reading time estimates, e.g. true
+read_time: true # reading time estimates, e.g. true
 words_per_minute: # 200
 mathjax:
   enable: true # MathJax equations, e.g. true, false (default)
